log
Thu 25 Apr 2024 06:44:32 PM UTC: 
 tests:  0|6
total_score: 0/70
aa8d916
Thu 25 Apr 2024 06:47:43 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
77b98ea
Thu 25 Apr 2024 06:54:15 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:20: error: implicit declaration of function ‘resolverColision’ [-Werror=implicit-function-declaration]
   49 |     int nuevaPos = resolverColision(map, pos);
      |                    ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5da204b
Thu 25 Apr 2024 06:59:53 PM UTC: 
 hashmap.c | 30 ++++++++++++++++++------------
 1 file changed, 18 insertions(+), 12 deletions(-)
 tests:  0|0
38bac5c
Thu 25 Apr 2024 07:00:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
debda22
Thu 25 Apr 2024 07:01:40 PM UTC: 
 hashmap.c | 59 +++++++++++++++++++++++++++++++++++++++++++----------------
 1 file changed, 43 insertions(+), 16 deletions(-)
 tests:  5|4
total_score: 30/70
2a03604
Thu 25 Apr 2024 07:03:02 PM UTC: 
 hashmap.c | 65 ++++++++++++++++++++++-----------------------------------------
 1 file changed, 23 insertions(+), 42 deletions(-)
 tests:  0|0
419e217
Thu 25 Apr 2024 07:03:38 PM UTC: 
 hashmap.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
 tests:  5|4
total_score: 30/70
b825b0f
Thu 25 Apr 2024 07:08:23 PM UTC: 
 hashmap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:72: error: expected ‘)’ before ‘{’ token
   51 |   if(map->buckets[pos] == NULL || is_equal(map->buckets[pos]->key, key){ // condicion
      |     ~                                                                  ^
      |                                                                        )
hashmap.c:60:1: error: expected expression before ‘}’ token
   60 | }
      | ^
Compilation failed
48e47e8
Thu 25 Apr 2024 07:08:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5bd3968
Thu 25 Apr 2024 07:09:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b47107
Thu 25 Apr 2024 07:10:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
68c9865
Thu 25 Apr 2024 07:11:21 PM UTC: 
 hashmap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
67c9dde
Thu 25 Apr 2024 07:11:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
59a060d
Thu 25 Apr 2024 07:12:50 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `createMap_test1':
test.c:(.text+0x3ea): undefined reference to `createMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `createMap_test2':
test.c:(.text+0x41a): undefined reference to `createMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `createMap_test3':
test.c:(.text+0x46a): undefined reference to `createMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x49d): undefined reference to `createMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `insert_test1':
test.c:(.text+0x81b): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `insert_test2':
test.c:(.text+0x932): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `insert_test3':
test.c:(.text+0x9a2): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o: in function `insert_test4':
test.c:(.text+0xa38): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xac8): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccZP6dAZ.o:test.c:(.text+0xb76): more undefined references to `insertMap' follow
collect2: error: ld returned 1 exit status
Compilation failed
96f8b09
Thu 25 Apr 2024 07:13:05 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `insert_test1':
test.c:(.text+0x7ab): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `insert_test2':
test.c:(.text+0x8c2): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `insert_test3':
test.c:(.text+0x932): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `insert_test4':
test.c:(.text+0x9c8): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xa58): undefined reference to `insertMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o:test.c:(.text+0xb06): more undefined references to `insertMap' follow
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `search_test1':
test.c:(.text+0xb82): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `search_test2':
test.c:(.text+0xc43): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccx3AFPH.o: in function `search_test3':
test.c:(.text+0xcc7): undefined reference to `searchMap'
collect2: error: ld returned 1 exit status
Compilation failed
8f11e8a
Thu 25 Apr 2024 07:13:56 PM UTC: 
 hashmap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:91:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   91 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
15542cd
Thu 25 Apr 2024 07:14:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
54e5a0a
